# vlan_emulator

./: ARCHITECTURE_PLAN.md  DESKTOP_UI_ARCHITECTURE.md  EXTENDED_ARCHITECTURE.md  README.md  UI_ARCHITECTURE.md  prerequisites.sh  pyproject.toml
data/: packets.db  rules.json
home_net_analyzer/: __init__.py  cli.py  config.py
home_net_analyzer/capture/: __init__.py  models.py  parser.py  sniffer.py
home_net_analyzer/desktop/: __init__.py  app.py  events.py  main.py  state.py  theme.py
home_net_analyzer/desktop/components/: __init__.py  log_panel.py
home_net_analyzer/desktop/views/: __init__.py  dashboard_view.py  device_detail_view.py  flow_trace_view.py  packet_view.py  rules_view.py  settings_view.py  simulation_view.py  topology_view.py
home_net_analyzer/rules/: __init__.py  engine.py  models.py
home_net_analyzer/rules/backends/: __init__.py  iptables.py  nftables.py
home_net_analyzer/simulation/: __init__.py  capture.py  scenarios.py  traffic.py
home_net_analyzer/simulation/network/: __init__.py  engine.py  models.py  protocols.py  scenarios.py
home_net_analyzer/simulation/router/: __init__.py  engine.py  models.py
home_net_analyzer/simulation/switch/: __init__.py  engine.py  models.py
home_net_analyzer/storage/: __init__.py  database.py  models.py  packet_store.py
home_net_analyzer/topology/: __init__.py  loader.py  models.py
home_net_analyzer/web/: __init__.py  api.py
tests/: __init__.py  test_cli_interactive.py  test_integration.py
tests/capture/: __init__.py  test_models.py  test_parser.py  test_sniffer.py  test_vlan.py
tests/rules/: __init__.py  test_engine.py  test_models.py  test_nftables.py
tests/simulation/: test_scenarios.py  test_simulated_capture.py  test_traffic.py
tests/storage/: test_database.py  test_models.py  test_packet_store.py
tests/topology/: __init__.py  test_loader.py  test_models.py
tests/web/: __init__.py  test_api.py
(+10 files in other folders)
